# grimbrain

./: .coveragerc  .env  .gitignore  .pre-commit-config.yaml  Makefile  README.md  __init__.py  __main__.py  ac_test.json  ac_test2.json  campaign.yaml  cli.py  conftest.py  demo_campaign.json  discerror.txt  embedding.py  fallback_llm.py  feature_demo.json  formatters.py  hash_cache.json  import_test.py  indexing._legacy.py  indexing.py  journal.md  journal.txt  main.py  models.py  monster_formatter.py  my_campaign.json  old-requirements.txt  pc.json  pc_elora.json  pc_wizard.json  print_env.py  pyproject.toml  pytest.ini  pytest.ini   # (edit this file if it contains addopts = --cov ...)  query.py  query_router.py  rb_demo.json  (+6 more)
.chroma/: chroma.sqlite3  manifest.json
campaigns/: campaign.yaml  campaign2.yaml
content/: __init__.py
data/: armor.json  monsters.json  spells.json  weapons.json
engine/: checks.py  combat.py  encounter.py  session.py
grimbrain/: __init__.py  campaign.py  character.py  characters.py  cli.py  cli_character.py  cli_helpers.py  cli_validate.py  config.py  config_env.py  effects.py  embedding.py  fallback_monsters.py  logging.py  logging_utils.py  models.py  models_character.py  pc_wizard.py  play.py  play_cli.py  pointbuy.py  rng.py  rules_core.py  rules_equipment.py  rules_spells.py  sheet.py  sheet_pdf.py  validation.py
jsonschema/: __init__.py
llama_index/: __init__.py
logs/: fireball_debug_20250805_232511.txt  fireball_debug_20250806_101941.txt  fireball_debug_20250806_114213.txt  fireball_debug_20250806_163602.txt  (+31 more)
tui/: app.py
(+353 files in other folders)
