[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grimbrain"
version = "0.1.0"
description = "Local-only RAG engine for solo D&D 5e"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
grimbrain = "grimbrain.cli:main"

[tool.setuptools]
# Flat layout: only package the grimbrain/ directory (ignore data/, packs/, etc.)
packages = ["grimbrain"]