[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grimbrain"
version = "0.1.0"
description = "Local-first solo DnD 5e engine"
authors = [{name = "Gregory Herrick"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12",
  "rich>=13",
]

[project.scripts]
grimbrain = "grimbrain.cli:app"

